Dark mode bug fixes (#67)
* Make warning text black

* Language selection .lang-icon

* Move invert(1) to .lang-icon

* dark mode for .code-pre

--- a/js/style.css
+++ b/js/style.css
@@ -44,8 +44,8 @@ footer {
 }
 
 @media (prefers-color-scheme: dark) {
-  footer img {
-    filter: invert();
+  footer img, .lang-icon {
+    filter: invert(1);
   }
 }
 
@@ -214,6 +214,7 @@ th {
   background-color: #dddd44;
   padding: 0.5rem;
   margin: 0.5rem 0;
+  color: black;
 }
 
 button {
@@ -240,9 +241,6 @@ button {
   vertical-align: middle;
   width: 32px;
   height: 32px;
-  @media (prefers-color-scheme: dark) {
-    filter: invert(90%);
-  }
 }
 
 .tabs {
@@ -343,6 +341,10 @@ button {
   height: 15rem;
   overflow-y: auto;
   color: black;
+  @media (prefers-color-scheme: dark) {
+    background-color: black;
+    color: white;
+  }
 }
 
 .lang-icon {
